started to do adaptive layout

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <header class="header">
       <nav class="container">
         <div class="about-help">
+          <button type="button" class="burger-button">
+            <svg class="burger-icon">
+              <use href="./images/sprite.svg#burger-icon"></use>
+            </svg>
+          </button>
           <ul class="list list-about">
             <li class="item-about">
               <a href="" class="link-about">Про нас</a>
@@ -125,7 +130,7 @@
                 <p class="work-hours">Щодня з 9:00 до 18:00</p>
                 <a href="tel:0679294545" class="header-tel">067 929-45-45</a>
               </div>
-              <button type="button" class="icon-small icon-button arrow-down">
+              <button type="button" class="icon-small icon-button">
                 <svg class="icon-phone">
                   <use href="./images/sprite.svg#arrow-down"></use>
                 </svg>
@@ -209,7 +214,7 @@
     </header>
     <main>
       <!-- ГЕРОЙ -->
-      <section class="section slider">
+      <!-- <section class="section slider">
         <div class="container">
           <h1 class="visually-hidden">Ліжко хюпер</h1>
           <img
@@ -219,9 +224,9 @@
             height="420"
           />
         </div>
-      </section>
+      </section> -->
       <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-      <section class="section popular-categories">
+      <!-- <section class="section popular-categories">
         <div class="container">
           <h2 class="section-title">Популярні категорії</h2>
           <ul class="list list-categories">
@@ -367,9 +372,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-      <section class="section popular-products">
+      <!-- <section class="section popular-products">
         <div class="container">
           <div class="title-wrapper">
             <h2 class="no-margin section-title">Найпопулярніші товари</h2>
@@ -734,9 +739,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- АКЦІЇ -->
-      <section class="section shares">
+      <!-- <section class="section shares">
         <div class="container">
           <div class="title-wrapper title-shares">
             <h2 class="no-margin section-title">Акції</h2>
@@ -771,9 +776,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- ОСТАННІ ВІДГУКИ  -->
-      <section class="section last-reviews">
+      <!-- <section class="section last-reviews">
         <div class="container wrapper-reviews">
           <div>
             <h2 class="section-title">Останні відгуки</h2>
@@ -916,9 +921,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
-      <section class="section articles-news">
+      <!-- <section class="section articles-news">
         <div class="container">
           <div class="title-wrapper">
             <h2 class="no-margin section-title">
@@ -1007,9 +1012,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- ПРО: ПЕРЕВАГИ -->
-      <section class="section about">
+      <!-- <section class="section about">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
           <div class="wrapper-description">
@@ -1070,10 +1075,10 @@
             </ul>
           </section>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- ФУТЕР -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="wrapper-footer">
           <div class="wrapper-item">
@@ -1279,8 +1284,7 @@
                 <p class="connection footer-call">Передзвоніть мені</p>
               </address>
             </div>
-            <!-- КАРТА -->
-            <div class="address-wrapper">
+                       <div class="address-wrapper">
               <svg class="icon-large icon-address">
                 <use href="./images/sprite.svg#footer-map"></use>
               </svg>
@@ -1306,7 +1310,7 @@
           &#169; KROVATO - Технології сну - 2022. Всі права захищені.
         </p>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
 
