add flex to header-container

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <!-- ХЕДЕР -->
     <header class="header">
-      <nav class="container">
+      <nav class="container header-container">
         <div class="about-help">
           <button type="button" class="burger-button">
             <svg class="burger-icon">
