--- a/index.html
+++ b/index.html
@@ -24,14 +24,9 @@
   <body>
     <!-- ХЕДЕР -->
     <header class="header">
-      <nav class="container header-container">
+      <nav class="container">
         <div class="about-help">
-          <button type="button" class="burger-button">
-            <svg class="burger-icon">
-              <use href="./images/sprite.svg#burger-icon"></use>
-            </svg>
-          </button>
-          <ul class="list list-about">
+                   <ul class="list list-about">
             <li class="item-about">
               <a href="" class="link-about">Про нас</a>
             </li>
@@ -94,6 +89,11 @@
         </div>
         <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
         <div class="header-bg">
+           <button type="button" class="burger-button">
+            <svg class="burger-icon">
+              <use href="./images/sprite.svg#burger-icon"></use>
+            </svg>
+          </button>
           <div class="header-middle">
             <a href="./index.html" class="link-header">
               <svg class="logo-header">
