added wrapper for button and main-feedback

--- a/index.html
+++ b/index.html
@@ -89,18 +89,19 @@
         </div>
         <!-- ДАЛІ БУДЕ ФОРМА- ЯК ДОЙДУ ДО ФОРМ - ТОДІ ЗРОБЛЮ -->
         <div class="header-bg">
-           <button type="button" class="burger-button">
+                   <div class="header-middle">
+                      <button type="button" class="burger-button">
             <svg class="burger-icon">
               <use href="./images/sprite.svg#burger-icon"></use>
             </svg>
           </button>
-          <div class="header-middle">
             <a href="./index.html" class="link-header">
               <svg class="logo-header">
                 <use href="./images/sprite.svg#logo-header"></use>
               </svg>
             </a>
-            <button type="button" class="button catalog">
+           <div class="button-mainFeedback">
+             <button type="button" class="button catalog">
               <svg class="icon-catalog" width="24" height="24">
                 <use href="./images/sprite.svg#catalog-menu"></use>
               </svg>
@@ -145,6 +146,7 @@
                 <p class="text-item">Передзвоніть мені</p>
               </div>
             </div>
+           </div>
             <div class="header-buttons">
               <button type="button" class="icon-large obrane-korzina">
                 <svg class="icon-obrane">
