--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
                 <use href="./images/sprite.svg#logo-header"></use>
               </svg>
             </a>
-           <div class="button-mainFeedback">
+          <button type="button" class="icon-large icon-button button-mobile">
+                <svg class="icon-phone">
+                  <use href="./images/sprite.svg#telephone"></use>
+                </svg>
+              </button>
              <button type="button" class="button catalog">
               <svg class="icon-catalog" width="24" height="24">
                 <use href="./images/sprite.svg#catalog-menu"></use>
@@ -146,7 +150,7 @@
                 <p class="text-item">Передзвоніть мені</p>
               </div>
             </div>
-           </div>
+         
             <div class="header-buttons">
               <button type="button" class="icon-large obrane-korzina">
                 <svg class="icon-obrane">
