did header of mobile markup

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <!-- ХЕДЕР -->
     <header class="header">
-      <nav class="container">
+      <nav class="container header-container">
         <div class="about-help">
                    <ul class="list list-about">
             <li class="item-about">
@@ -152,14 +152,19 @@
             </div>
          
             <div class="header-buttons">
-              <button type="button" class="icon-large obrane-korzina">
-                <svg class="icon-obrane">
+                           <button type="button" class="icon-large obrane-korzina">
+                <svg class="icon-header">
                   <use href="./images/sprite.svg#obrane-header"></use>
                 </svg>
               </button>
               <button type="button" class="icon-large obrane-korzina">
-                <svg class="korzina-header">
+                <svg class="icon-header">
                   <use href="./images/sprite.svg#korzina-heder"></use>
+                </svg>
+              </button>
+               <button type="button" class="icon-large obrane-korzina">
+                <svg class="icon-header">
+                  <use href="./images/sprite.svg#icon-search"></use>
                 </svg>
               </button>
             </div>
