did section popular categoris of mobile layout

--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
           <h1 class="visually-hidden">Ліжко хюпер</h1>
           <div class="wrapper-slider">
             <picture> -->
-              <!-- sektop  -->
-              <!-- <source
+      <!-- sektop  -->
+      <!-- <source
                 media="(min-width:1320px)"
                 srcset="
                   ./images/slider/slider-shares.jpg    1x,
@@ -247,8 +247,8 @@
                 "
                 type="image/webp"
               /> -->
-              <!-- mobile  -->
-              <!-- <source
+      <!-- mobile  -->
+      <!-- <source
                 media="(max-width:1319px)"
                 srcset="
                   ./images/slider/slide-mob.jpg    1x,
@@ -273,27 +273,36 @@
         </div>
       </section> -->
       <!-- ПОПУЛЯРНІ КАТЕГОРІЇ -->
-       <section class="section popular-categories">
+      <section class="section popular-categories">
         <div class="container">
           <h2 class="section-title">Популярні категорії</h2>
           <ul class="list list-categories">
             <li class="item-categories">
-                              <picture>
-                <!-- desktop  -->
+              <picture>
+                <!-- mobile  -->
                 <source
-                media="(min-width:1320px)"
-                srcset="./images/popular-categoris/beds-mobile.png 1x, ./images/popular-categoris/beds-mobile-2x.png 2x"
-                type="image/png">
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-beds.png    1x,
+                    ./images/popular-categoris/mobile-beds-2x.png 2x
+                  "
+                  type="image/png"
+                />
                 <source
-                media="(min-width:1320px)"
-                srcset="./images/popular-categoris/">
-                   <img
-                src="./images/popular-categoris/beds-mobile.png"
-                alt="ліжка"
-                class="img-categories"
-              />
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-beds.webp    1x,
+                    ./images/popular-categoris/mobile-beds-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-beds.png"
+                  alt="ліжка"
+                  class="img-categories"
+                />
               </picture>
-            <h3 class="description title-descr">Ліжка</h3>
+              <h3 class="description title-descr">Ліжка</h3>
               <p class="description amount">54</p>
               <a class="icon-large link-categories">
                 <svg class="icons-categories">
@@ -302,11 +311,30 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/matresses.png"
-                alt="матраци"
-                class="img-categories"
-              />
+              <picture>
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-matresses.png    1x,
+                    ./images/popular-categoris/mobile-matresses-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-matresses.webp    1x,
+                    ./images/popular-categoris/mobile-matresses-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-matresses.png"
+                  alt="матраци"
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">Матраци</h3>
               <p class="description amount">30</p>
               <a class="icon-large link-categories">
@@ -316,11 +344,30 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/soft-furniture.png"
-                alt="м'які меблі"
-                class="img-categories"
-              />
+              <picture>
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-soft-furniture.png    1x,
+                    ./images/popular-categoris/mobile-soft-furniture-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-soft-furniture.webp    1x,
+                    ./images/popular-categoris/mobile-soft-furniture-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-soft-furniture.png"
+                  alt="м'які меблі"
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">М'які меблі</h3>
               <p class="description amount">196</p>
               <a class="icon-large link-categories">
@@ -330,11 +377,30 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/wardrodes.png"
-                alt=""
-                class="img-categories"
-              />
+              <picture>
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-wardrodes.png    1x,
+                    ./images/popular-categoris/mobile-wardrodes-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-wardrodes.webp    1x,
+                    ./images/popular-categoris/mobile-wardrodes-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="./images/popular-categoris/mobile-wardrodes.png"
+                  alt="шафи"
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">Шафи</h3>
               <p class="description amount">79</p>
               <a class="icon-large link-categories">
@@ -344,11 +410,30 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/comodes.png"
-                alt=""
-                class="img-categories"
-              />
+              <picture>
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-comodes.png    1x,
+                    ./images/popular-categoris/mobile-comodes-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-comodes.webp    1x,
+                    ./images/popular-categoris/mobile-comodes-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-comodes.png"
+                  alt="комоди"
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">Комоди</h3>
               <p class="description amount">54</p>
               <a class="icon-large link-categories">
@@ -358,11 +443,30 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/thumbs.png"
-                alt=""
-                class="img-categories"
-              />
+              <picture>
+                <!-- mobile  -->
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-thumbs.png    1x,
+                    ./images/popular-categoris/mobile-thumbs-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-thumbs.webp    1x,
+                    ./images/popular-categoris/mobile-thumbs-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-thumbs.png"
+                  alt=""
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">Тумби</h3>
               <p class="description amount">64</p>
               <a class="icon-large link-categories">
@@ -372,11 +476,29 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/tables.png"
-                alt=""
-                class="img-categories"
-              />
+              <picture>
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-tables.png    1x,
+                    ./images/popular-categoris/mobile-tables-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-tables.webp    1x,
+                    ./images/popular-categoris/mobile-tables-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-tables.png"
+                  alt="Столи"
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">Столи</h3>
               <p class="description amount">35</p>
               <a class="icon-large link-categories">
@@ -386,11 +508,29 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/chairs.png"
-                alt=""
-                class="img-categories"
-              />
+              <picture>
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-chairs.png    1x,
+                    ./images/popular-categoris/mobile-chairs-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-chairs.webp    1x,
+                    ./images/popular-categoris/mobile-chairs-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-chairs.png"
+                  alt="Стільці"
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">Стільці</h3>
               <p class="description amount">89</p>
               <a class="icon-large link-categories">
@@ -400,12 +540,30 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/furniture-walls.png"
-                alt=""
-                class="img-categories"
-              />
-              <h3 class="description title-descr">Меблеві стіни</h3>
+              <picture>
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-furniture-walls.png    1x,
+                    ./images/popular-categoris/mobile-furniture-walls-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-furniture-walls.webp    1x,
+                    ./images/popular-categoris/mobile-furniture-walls-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-furniture-walls.png"
+                  alt="Меблева стіни"
+                  class="img-categories"
+                />
+              </picture>
+              <h3 class="description title-descr">Меблеві <span class="furniture-walls">стіни</span></h3>
               <p class="description amount">24</p>
               <a class="icon-large link-categories">
                 <svg class="icons-categories">
@@ -414,11 +572,29 @@
               </a>
             </li>
             <li class="item-categories">
-              <img
-                src="./images/popular-categoris/kitchens.png"
-                alt=""
-                class="img-categories"
-              />
+              <picture>
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-kitchens.png    1x,
+                    ./images/popular-categoris/mobile-kitchens-2x.png 2x
+                  "
+                  type="image/png"
+                />
+                <source
+                  media="(max-width:1319px)"
+                  srcset="
+                    ./images/popular-categoris/mobile-kitchens.webp    1x,
+                    ./images/popular-categoris/mobile-kitchens-2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  src="./images/popular-categoris/mobile-kitchens.png"
+                  alt="Кухні"
+                  class="img-categories"
+                />
+              </picture>
               <h3 class="description title-descr">Кухні</h3>
               <p class="description amount">30</p>
               <a class="icon-large link-categories">
@@ -429,7 +605,7 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
       <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
       <!-- <section class="section popular-products">
         <div class="container">
